Bug 411324 - The path to the image in the title is not restored after renaming or moving the catalog with the project.
Summary: The path to the image in the title is not restored after renaming or moving t...
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 19.08.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-26 16:58 UTC by ITicDigger
Modified: 2021-04-03 23:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ITicDigger 2019-08-26 16:58:39 UTC
SUMMARY
If you create a title clip with an image, save it, and then create a title clip from this saved title clip with the image, then after renaming or moving the directory with the project, the image from the caption clip will be unavailable, and it will not be possible to restore the connection between the picture file and the project. This is so if the "custom project folder" is inside the directory with the project (which will be renamed or moved)

STEPS TO REPRODUCE
1. Create new project
2. Create new folder for Project (/proj/)
3. Open Project settings and change "custom project folder" to "/proj/projData"
4. crete title clip with some image and save him somwhere (not in /proj/)
5. create empty title clip
6. open him in title editor
7. open title clip from file created on step 4
8. close title editor with OK
9. After these steps, a file with the name of the type titlesd1917ae434a041930d0ef88c9199ec67.titlepart should appear in the /proj/projData/ directory
10. Save project as /proj/Proj1.kdenlive
11. rename /proj/ to /proj2
12 open /proj2/Proj1.kdenlive


OBSERVED RESULT
A message appears that the file /proj2/projData/titlesd1917ae434a041930d0ef88c9199ec67.titlepart was not found. But even if you click "search recursively" or even double-click on the line with the missing file and enter the path to it (although it is already correctly specified), the image in the caption clip will be missing and the editor will display a message that the file is proj/projData/titlesd1917ae434a041930d0ef88c9199ec67.titlepart not found. And there will be no way to get back to this file. You have to add the image manually.

EXPECTED RESULT
Image communication should be restored either automatically, or after a recursive search, or after manually specifying this particular file.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 18.04.2
(available in About System)
KDE Plasma Version: 5.12.8
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5
Comment 1 Julius Künzel 2021-04-03 23:02:54 UTC
Git commit de55a57e7395738028478748b1ffec662baffed6 by Julius Künzel.
Committed on 03/04/2021 at 23:02.
Pushed by jlskuz into branch 'release/21.04'.

Fix replacement of missing images in title clips

Fixes #971

M  +4    -1    src/doc/documentchecker.cpp

https://invent.kde.org/multimedia/kdenlive/commit/de55a57e7395738028478748b1ffec662baffed6