Fix replacement of missing images in title clips

Fixes #971
BUG: 411324